<resources>
    <string name="app_name">ASB GROUP MANAGERMENT</string>
    <string name="device_id">Device ID: </string>
    <string name="app_version">App ver: </string>
    <string name="database_version">DB ver: </string>
    <string name="userid">USER ID</string>
    <string name="password">PASSWORD</string>
    <string name="rememberswitch">Remember Login</string>
    <string name="webpos">WEBPOS</string>
    <string name="smart_active">SMART ACTIVE</string>
    <string name="login">LOGIN</string>
    <string name="noaccount">No account yet ? </string>
    <string name="creataccount">Create one</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="privacy">Privacy policy</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="titlemenuapp">MENU APP</string>
    <string name="btnname_product_manage">PRODUCT MANAGER</string>
    <string name="btnname_scanner_Setting">SCANNER SETTING</string>
    <string name="title_managerproduct">MANAGER</string>
    <string name="btn_inventory">INVENTORY</string>
    <string name="btn_issue_book">ISSUE BOOK</string>
    <string name="btn_newincoing">NEW INCOMING</string>
    <string name="btn_newoutgoing">NEW OUTGOING</string>
    <string name="btn_report">REPORTS</string>
    <string name="setting">SETTING</string>
    <string name="mac_address">MAC ADRESS:</string>
    <string name="power">POWER(0-33):</string>
    <string name="ip_address">IP ADDRESS:</string>
    <string name="port">PORT:</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancle">CANCLE</string>
    <string name="TITLE_FRAGMENT_INCOMING">New Incoming</string>
    <string name="serial">Serial</string>
    <string name="dateinout">Date</string>
    <string name="whname">WH Name</string>
    <string name="typeincoming">Type Incoming</string>
    <string name="cmt">Comment</string>
    <string name="title_inventory">INVENTORY</string>
    <string name="number_inventory">Num</string>
    <string name="Name_inventory">Name</string>
    <string name="Barcode_inventory">Barcode</string>
    <string name="Quantity_inventory">Quantity</string>
    <string name="Quantity_inventory_2">Quantity:</string>
    <string name="Error_inventory">Error:</string>
    <string name="title_member">Member information</string>
    <string name="member_name">Name:</string>
    <string name="member_ID">ID:</string>
    <string name="Member_RFID">RFID:</string>
    <string name="Member_gender">Gender:</string>
    <string name="Member_currentmembership">Membership:</string>
    <string name="Member_contact">Contact:</string>
    <string name="Book_number">Number</string>
    <string name="Book_title">Book title</string>
    <string name="Book_RFID">RFID code</string>
    <string name="Book_author">Author</string>
    <string name="Book_categories">Categories</string>
    <string name="cancel_button">取消</string>
    <string name="title">表示案件を変更します</string>
    <string name="titleyear">発売日	指定</string>
    <string name="classify">分類別</string>
    <string name="publish">出版社別</string>
    <string name="back">戻る</string>
    <string name="yearnull">発売日NULL</string>
    <string name="year1over">１年以上前</string>
    <string name="year2over">２年以上前</string>
    <string name="year3over">３年以上前</string>
    <string name="year4over">４年以上前</string>
    <string name="year5over">５年以上前</string>
    <string name="number_sample">抜取数</string>
    <string name="number_candidates">候補数</string>
    <string name="inlist">リスト内</string>
    <string name="outlist">リスト外</string>
    <string name="ISBN">ISBN</string>
    <string name="check">チェック</string>
    <string name="name">書名</string>
    <string name="location_name">ロケーションCD: </string>
    <string name="finalpurchasedate">最終仕入: </string>
    <string name="finalsaledate">最終売上: </string>
    <string name="sale_number">売上数: </string>
    <string name="national_sale_number">全国売上数累計: </string>
    <string name="logout_msg">ログアウトを行います。\nよろしいですか？</string>
    <string name="cancel_msg">スキャンした商品の\n取消を行います。\nよろしいですか？</string>
    <string name="logout_yes">はい</string>
    <string name="logout_no">いいえ</string>
    <string name="retry">リトライ</string>
    <string name="cancel">キャンセル</string>
    <string name="grant_camera_permission" translatable="false">To use the barcode scanner, please grant camera permissions and try again.</string>
    <string name="hpc">返品チェック</string>
    <string name="shik">商品入替</string>
    <string name="order">発注</string>
    <string name="replenishment_order">補充発注</string>
    <string name="product_search">商品検索</string>
    <string name="search_with_est_order_function">商品検索</string>
    <string name="search_information_display_only">商品検索一般</string>
    <string name="purchase">仕入</string>
    <string name="incoming_goods">入荷検品</string>
    <string name="direct_purchase">直接仕入</string>
    <string name="returns">返品</string>
    <string name="books_returns">書籍返品</string>
    <string name="books_returns_manage">無伝返品</string>
    <string name="magazine_returns">雑誌返品</string>
    <string name="media_returns">メディア返品</string>
    <string name="direct_return">直接返品</string>
    <string name="move">移動</string>
    <string name="moving_goods_receipt">移動入庫</string>
    <string name="moving_issue">移動出庫</string>
    <string name="inventory_registration">棚卸登録</string>
    <string name="inventory_registration_vj">棚卸登録</string>
    <string name="location_registration">ロケーション登録</string>
    <string name="inventory">棚卸</string>
    <string name="configuration">設定</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="storage_bin_list">棚番一覧</string>
    <string name="total_storage_bin">合計棚番</string>
    <string name="total_product">合計点数</string>
    <string name="bin_code">棚番</string>
    <string name="total_product_in_bin">点数</string>
    <string name="total_item_in_bin">数量</string>
    <string name="person_in_charge_id">担当者ID</string>
    <string name="device_no">デバイスNO</string>
    <string name="registration_date">登録日</string>
    <string name="shelf_no">棚NO</string>
    <string name="after_change_self_no">変更後棚NO</string>
    <string name="return_destination">返品先</string>
    <string name="supplier">発注先</string>
    <string name="supplier_1">取引先</string>
    <string name="vendor">仕入先</string>
    <string name="box_no">箱NO</string>
    <string name="slip_no">伝票NO</string>
    <string name="processing_table_no">処理表NO</string>
    <string name="unit_price">仕入単価</string>
    <string name="partner">相手先NO</string>
    <string name="new_middle_division">新中区分</string>
    <string name="process_division">処理区分</string>
    <string name="new_product">新品</string>
    <string name="middle_ages">中古</string>
    <string name="process_register_change">登録/変更</string>
    <string name="process_delete">削除</string>
    <string name="number_order">Num</string>
    <string name="shelf_number">Shelf</string>
    <string name="barcode_product">Barcode</string>
    <string name="name_product">Name</string>
    <string name="cd1_insert">JAN上段またはJAN</string>
    <string name="cd2_or_price_insert">JAN下段または価格</string>
    <string name="addoncd">アドオンコード（5桁）</string>
    <string name="date_scan">登録日</string>
    <string name="product_detail">製品情報</string>
    <string name="search_fail">検索対象商品がありません</string>
    <string name="base_price">Price</string>
    <string name="tax_include_pride">Tax price</string>
    <string name="quantity">Quan</string>
    <string name="total_quantity">Quantity</string>
    <string name="total_amount">Amount</string>
    <string name="total_error">Error</string>
    <string name="btn_moving_good_setting">移動出 \n庫設定</string>
    <string name="btn_return">戻る</string>
    <string name="btn_back">Back</string>
    <string name="btn_update">更新</string>
    <string name="btn_send">送信</string>
    <string name="btn_registration">登録</string>
    <string name="btn_search">Search</string>
    <string name="btn_delete_all">全削除</string>
    <string name="btn_manual_input">手入力</string>
    <string name="btn_quantity">数量</string>
    <string name="btn_finish">確定</string>
    <string name="btn_delete">削除</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Pre</string>
    <string name="btn_delete_all_search">検索データ全削除</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_submit_product">データを送信します。</string>
    <string name="btn_notification_submit_product_yes">OK</string>
    <string name="btn_notification_submit_product_no">キャンセル</string>
    <string name="btn_notification_submit_product_delete_all_setting">送信せずに全削除</string>
    <string name="btn_notification_submit_product_delete_all_no">削除せずに追加登録</string>
    <string name="btn_notification_submit_product_delete_all">全削除して新規に登録</string>
    <string name="notification_delete_product_all_setting">登録された全データを削除します。\nよろしいですか？</string>
    <string name="notification_delete_product_all">既登録のデータが存在します。\n既登録データを削除しますか？</string>
    <string name="notification_delete_product">送信が完了しました。\nデータを削除しますか？</string>
    <string name="btn_notification_delete_product_yes">はい</string>
    <string name="btn_notification_delete_product_no">いいえ</string>
    <string name="submit_progressing">データ送信中</string>
    <string name="titleSelectDate">期間</string>
    <string name="january">1月</string>
    <string name="february">2月</string>
    <string name="march">3月</string>
    <string name="april">4月</string>
    <string name="may">5月</string>
    <string name="june">6月</string>
    <string name="july">7月</string>
    <string name="august">8月</string>
    <string name="september">9月</string>
    <string name="october">10月</string>
    <string name="november">11月</string>
    <string name="december">12月</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string-array name="days_sunday_array">
        <item>日</item>
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
        <item>土</item>
    </string-array>
    <string-array name="processing_division">
        <item>登録</item>
        
        <item>削除</item>
    </string-array>
    <string name="reaturn_candidate">返品候補</string>
    <string name="scanner_fragment_activity">ZBar Barcode Scanner</string>
    <string name="fragment_barcode">Barcode Scan</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="hello_world">Hello World</string>
    <string name="select_all_year">すべて</string>
    <string name="select_1_year_ago">発売日1年前</string>
    <string name="select_2_year_ago">発売日2年前</string>
    <string name="select_3_year_ago">発売日3年前</string>
    <string name="select_4_year_ago">発売日4年前</string>
    <string name="select_5_year_ago">発売日5年前</string>
</resources>