<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:shadowColor="@color/BlueGray"
            android:text="@string/app_name"
            android:textColor="@color/BlueDarkGray"
            android:textSize="50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_userid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:fontFamily="@font/cairo"
            android:hint="@string/userid"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:fontFamily="@font/cairo"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:shadowColor="@color/BlueGray"
            android:textSize="15sp" />

<!--        <Switch-->
<!--            android:id="@+id/switch1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:fontFamily="@font/public_sans_thin"-->
<!--            android:layoutDirection="rtl"-->
<!--            android:minHeight="48dp"-->
<!--            android:text="@string/rememberswitch"-->
<!--            android:textColor="@color/BlueGray"-->
<!--            android:thumbTint="@color/BlueGray"-->
<!--            android:trackTint="@color/BlueGray" />-->

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_shape_bluelight"
            android:text="@string/login"
            android:textColor="@color/BlueDarkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/simpleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/noaccount"
                android:textColor="@color/BlueGray" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/creataccount"
                android:textColor="@color/BlueGray" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:text="@string/forgotpassword"
            android:textColor="@color/BlueGray" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:fontFamily="@font/cairo"
            android:gravity="center_horizontal"
            android:text="@string/privacy"
            android:textColor="@color/BlueGray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txv_device_id2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/cairo_extralight"
            android:gravity="center_horizontal"
            android:text="@string/device_id"
            android:textColor="@color/BlueGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_app_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_extralight"
                android:gravity="center_horizontal"
                android:text="@string/app_version"
                android:textColor="@color/BlueGray" />

            <TextView
                android:id="@+id/txv_db_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cairo_extralight"
                android:gravity="center_horizontal"
                android:text="@string/database_version"
                android:textColor="@color/BlueGray" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>